[package]
name = "image-extras"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0" # MSRV Policy: N-2
license = "MIT OR Apache-2.0"
description = "Additional image format decoders for the image crate"
repository = "https://github.com/image-rs/image-extras"

include = ["src", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

[features]
default = ["ora", "otb", "pcx", "sgi", "xbm", "xpm", "wbmp"]

# Each feature below is the file extension for the file format encoder/decoder
# it enables.
ora = ["image/png", "dep:zip", "dep:ouroboros"]
otb = []
sgi = []
pcx = ["dep:pcx"]
wbmp = ["dep:wbmp"]
xbm = []
xpm = []


[dependencies]
image = { version = "0.25.8", default-features = false }

# Optional dependencies
ouroboros = { version = "0.18.5", optional = true }
pcx = { version = "0.2.4", optional = true }
wbmp = { version = "0.1.2", optional = true }
zip = { version = "5.1.1", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
image = { version = "0.25.8", default-features = false, features = ["png", "tiff"] }
walkdir = "2.5.0"
